# ai-crash-course-1

./: .gitignore  01-Intro-Deep Learning with PyTorch.md  02-basics.ipynb  03-banknotes.ipynb  README.md  TASK_DESCRIPTION.md  pyproject.toml
